# web-image-editor

./: Cargo.toml  LICENSE  README.md  index.html
examples/embed/: index.html
js/: add_items.js  capture.js  focus.js  query_string.js  wasm_exports.js
src/: app.rs  editable_canvas_div.rs  file_details.rs  generic_movable_div.rs  image_movable_div.rs  image_static_div.rs  js_funcs.rs  main.rs  page_items.rs  settings.rs  text_details.rs  textbox_movable_div.rs  textbox_static_div.rs
styles/: style.css
