[package]
name = "web-image-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11.0"
web-sys = "0.3.69"
base64 = "0.22.1"
js-sys = "0.3"
imagesize = "0.12"
wasm-bindgen = "0.2.92"
derive_builder = "0.20.0"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
